--- a/groovyscriptserver/nbproject/project.properties
+++ b/groovyscriptserver/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/groovyscriptserver.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.bliki-core-3.0.19.jar=lib\\bliki-core-3.0.19.jar
+file.reference.simple-5.1.5.jar=lib\\simple-5.1.5.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.bliki-core-3.0.19.jar}:\
+    ${file.reference.simple-5.1.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
