--- a/groovyscriptserver/nbproject/project.properties
+++ b/groovyscriptserver/nbproject/project.properties
@@ -5,7 +5,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
+build.classes.excludes=**/*.java,**/*.form,**/*.groovy
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
@@ -33,7 +33,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.bliki-core-3.0.19.jar}:\
-    ${file.reference.simple-5.1.5.jar}
+    ${file.reference.simple-5.1.5.jar}:\
+    ${libs.groovy-all.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=GroovyScriptServer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -75,3 +76,4 @@ run.test.classpath=\
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
+compile.on.save.unsupported.groovy=true
